# calhacks-assessment

./: .env.template  .gitignore  README.md
api/: Cargo.toml  rustfmt.toml
api/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/badge/create/: page.tsx
frontend/src/app/badges/: layout.tsx
frontend/src/app/badges/[id]/: page.tsx
frontend/src/app/badges/create/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/[id]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/ui/: Typography.tsx
frontend/src/components/ui/custom/: auth-card.tsx
frontend/src/utility/: jwt.ts
